# wechat-bot

./: Cargo.toml
src/: lib.rs  main.rs  main_common.rs
