[package]
name = "wechat-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "wechat-bot"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
libloading = "0.8.5"
log = "0.4.22"
nng = "1.0.1"
once_cell = "1.19.0"
parking_lot = "0.12.3"
prost = "0.13.1"
tonic = "0.12.1"
fast-able = "1"
common_uu = { version = "1" }

[build-dependencies]
tonic-build = "0.12.1"

[profile.release]
lto = true
opt-level = 'z'
